# Servus

./: .gitmodules  CMakeLists.txt
servus/: CMakeLists.txt  result.h  serializable.h  servus.h  types.h  uint128_t.h  uri.cpp  uri.h
servus/avahi/: servus.h
servus/dnssd/: servus.h
servus/qt/: CMakeLists.txt  itemModel.h
